- Add style variant .colorborder: add decorative top border to main elements and bottom border to hovered buttons - Change default theme (introduce .colorborder.colortoggle) - Consistent button padding between classic and material - Improve rounding (radius) of .material body > div - Prevent shifting elements when switching between .colortoggle (always add 1.5px border)

--- a/music.css
+++ b/music.css
@@ -167,12 +167,11 @@ button {
 	display: inline-block;
 	flex-shrink: 0;
 	height: var(--button-size);
-	padding: 0 .75em;
+	padding: 0 calc(1.25 * var(--space));
 	font-size: calc(1em * var(--button-factor));
 	white-space: nowrap;
 	background: none;
-	border: none;
-	border-color: transparent;
+	border: 1.5px solid transparent;
 	border-radius: var(--radius);
 	cursor: pointer;
 	transition: background .2s, border-color .4s, opacity .4s;
